--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.sirius.redpacket"
+        applicationId "com.sirius.redpacketHelper"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
